# boundary-detector

./: .gitignore  CMakeLists.txt  ExtendedMat.cpp  ExtendedMat.h  main.cpp
Sources/: ConeLayer.cpp  ConeLayer.h  CortexLayer.cpp  CortexLayer.h  GanglionLayer.cpp  GanglionLayer.h  SpatialSparsenessConstraint.cpp  SpatialSparsenessConstraint.h  main.cpp
